--- a/views/yimin_index.html
+++ b/views/yimin_index.html
@@ -1,88 +1,74 @@
 <!DOCTYPE html>
 <html>
 <head>
-{% include "header_new.html" %}
-<link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/logo.css" >
-<link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/index.css">
-<link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/dep/css/idangerous.swiper-2.7.6.css" >
-<script src="{{helper.cdnhost}}/dep/js/idangerous.swiper-2.7.6-1.js"></script>
-<style type="text/css">
-  .xuanze-chengshi p a:last-child{
-    margin-right: 0;
-  }
-  .nationality_guoqi_warp{
-    width: 1200px;
-    left: 50%;
-    margin-left: -600px;
-    position: fixed;
-    z-index: 999;
-    display: none;
-    border-top: 0px;
-    overflow: visible;
-  }
-  .nationality_guoqi{
-    /*display: flex;*/
-    width: 1154px;
-    height: 141px;
-    border: 3px solid #c13232;
-    background: #f1f4f6;
-    padding: 0 20px;
-    position: relative;
-    margin: 0 auto;
-  }
-  .liuxue-guoqi img{
-    width:46px;
-    height:30px;
-    margin: 0;
+  {% include "header_new.html" %}
+  <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/logo.css" >
+  <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/index.css">
+  <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/dep/css/idangerous.swiper-2.7.6.css" >
+  <script src="{{helper.cdnhost}}/dep/js/idangerous.swiper-2.7.6-1.js"></script>
+  <style type="text/css">
+    .xuanze-chengshi p a:last-child{
+      margin-right: 0;
+    }
+    .nationality_guoqi_warp{
+      width: 1200px;
+      left: 50%;
+      margin-left: -600px;
+      position: fixed;
+      z-index: 999;
+      display: none;
+      /* border-top: 0px; */
+      overflow: visible;
+    }
+    .nationality_guoqi{
+      height: 141px;
+      /* border: 3px solid #c13232; */
+      background: #f1f4f6;
+      /* padding: 0 20px; */
+      position: relative;
+      margin: 0 auto;
+    }
+    .liuxue-guoqi img{
+      width:46px;
+      height:30px;
+      margin: 0;
 
-  }
-  .liuxue-guoqi{
-    width: 100%;
-    height: auto;
-  }
-  .liuxue-guoqi p{
-    color:#333 ;
-    font-size: 12px;
-    text-align: center;
-    margin-top: 5px;
-  }
-  .liuxue-guoqi a{
-    width: auto;
-    margin: 10px 0px 25px 87px;
-    height:30px;
-    display:block;
-    float: left;
-    position: relative;
-    border: 0px;
-  }
-  .liuxue-guojia-title{
-    position: absolute;
-    width: 174px;
-    height: 30px;
-    border: 3px solid #c13232;
-    border-top: 3px solid #f1f4f6;
-    color: #c13232;
-    font-size: 16px;
-    text-align: center;
-    line-height: 24px;
-    /* border-radius: 15px; */
-    /*margin: 0 auto;*/
-    /*margin-top: -3px;*/
-    /*z-index: 999999;*/
-    background: #f1f4f6;
-    bottom: -36px;
-    left: 50%;
-    margin-left: -77px;
-    padding: 0;
-  }
-</style>
+    }
+    .liuxue-guoqi p{
+      color:#333 ;
+      font-size: 12px;
+      text-align: center;
+      margin-top: 5px;
+    }
+    .liuxue-guoqi a{
+      width: auto;
+      margin: 10px 0px 25px 87px;
+      height:30px;
+      display:block;
+      float: left;
+      position: relative;
+      border: 0px;
+    }
+    .yimin-shou {
+      width: 70px;
+      height: 66px;
+      position: absolute;
+      top: 0;
+      left: 8px;
+      background: url({{helper.cdnhost}}/assets/img/shou.gif) no-repeat 0 0;
+    }
+  </style>
 </head>
 <body>
 {% include "widget/common_hide/common_hide.html"%}
 <!--留学国家-->
-<div class="nationality_guoqi_warp">
-  <div class="nationality_guoqi">
-    <div class="liuxue-guoqi" style="margin-left:0px;">
+<div class="nationality_guoqi_warp dui-box-shadow">
+  <div class="liuxue-guojia-title" style="height: auto;">
+    点击进入移民国家地区
+  </div>
+  <div class="liuxue-guojia-line" style="height: 150px;"></div>
+  <div class="nationality_guoqi" style="height: 150px;">
+    <div class="liuxue-guoqi clearfix" style="margin-left:0px;">
       <a href="#country1" style="margin: 10px 0px 25px 82px;"><img src="{{helper.cdnhost}}/assets/img/America.png" alt="美国移民"><p>美国</p></a>
       <a href="#country3" style="margin: 10px 0px 25px 82px;"><img src="{{helper.cdnhost}}/assets/img/Canada.png" alt="加拿大移民"><p>加拿大</p></a>
       <a href="#country4" style="margin: 10px 0px 25px 82px;"><img src="{{helper.cdnhost}}/assets/img/Australia.png" alt="澳大利亚移民"><p>澳大利亚</p></a>
@@ -101,9 +87,7 @@
       <a href="#country13" style="margin: 10px 0px 25px 82px;"><img src="{{helper.cdnhost}}/assets/img/Dominica.png" alt="多米尼克移民"><p>多米尼克</p></a>
       <a  href="#country54" style="margin: 10px 0px 25px 82px;"><img src="{{helper.cdnhost}}/assets/img/HongKong.png" alt="中国香港移民"><p>中国香港</p></a>
     </div>
-    <div class="liuxue-guojia-title">
-      点击进入移民国家/地区
-    </div>
+    <div class="yimin-shou"></div>
   </div>
 </div>
 {% include "widget/top/top_yimin.html" %}
