--- a/views/login/forgetUser.html
+++ b/views/login/forgetUser.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-
   {% include "header_new.html" %}
   <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/widget/nav_login.css"/>
-  
   <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/custom.css">
-
   <script src="{{helper.cdnhost}}/dep/js/layer/layer.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/icheck.min.js"></script>
   <style type="text/css">
@@ -155,14 +152,12 @@
 </head>
 <body>
 {% include "widget/common_hide/common_hide.html"%}
-{#{% include "widget/top/top.html" %}#}
 <div class="top" style="position:relative;z-index: 1002;">
 </div>
 <div class="main" style="width: 1180px;margin: 0 auto;">
   {% import "widget/new_nav_first/nav_login.html" as nav_login %}
   {{ nav_login.nav_login(tdk,helper) }}
 </div>
-
 <div class="register_overseas clearfix" style="padding-top: 0px;">
   {#<div class="register_content">
     <div class="register_nei login_nei">
@@ -309,7 +304,6 @@
     @2009 金吉列出国留学咨询服务有限公司 版权所有 京ICP备05010035号&nbsp;&nbsp;&nbsp;&nbsp;留学投诉电话4006-213-315&nbsp;&nbsp;&nbsp;&nbsp;投诉邮箱：315@jjl.cn
   </div>
 </div>
-
 <div class="xy" style="display: none">
   <div class="xy_title">金吉列用户注册协议</div>
   <div class="xy_con">
@@ -368,9 +362,7 @@
   </div>
 </div>
 <script src="{{helper.cdnhost}}/assets/js/sha1.js" type="text/javascript" charset="utf-8"></script>
-<!--<script src="{{helper.cdnhost}}/assets/js/nav_forget.js" type="text/javascript" charset="utf-8"></script>-->
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
-<!-- <script src="{{helper.cdnhost}}/assets/js/top.js"></script> -->
 <script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
 <script>
   $(document).ready(function () {
@@ -381,6 +373,15 @@
         var hhh = h.split("?");
         if (login_nickname == null) {
           var val = '<div class="dui-layout-lg top-con">'+
+                '<div class="top-con-left" style="display: inline-block;">'+
+                  '<img src="{{helper.cdnhost}}/assets/img/top_phone.png" alt="" class="top_400">'+
+                  '<span style="font-size: 12px;color: #666;margin-left: 3px">400-010-8000</span>'+
+                '</div>'+
+                '<ul class="top-con-center">'+
+                  '<li class="{{'active' if tdk.pagekey == 'HOME'}}"><a href="{{ helper.urlgen('branch_home','c='+tdk.cityid) }}">出国留学</a></li>'+
+                  '<li class="{{'active' if tdk.pagekey == 'YIMIN_HOME'}}"><a href="{{ helper.urlgen('yimin') }}">海外移民</a></li>'+
+                  '<li class="{{'active' if tdk.pagekey == 'PROFILE'}}"><a href="{{ helper.urlgen('about') }}">关于我们</a></li>'+
+                '</ul>'+
                 '<div class="top-con-right">';
                   if (hhh[1]) {
                   val += '<span><a href="' + fn.urlgen("register")+"?"+hhh[1] + '" class="dui-text-warning-ss" rel="nofollow">注册</a></span>'+
@@ -396,6 +397,15 @@
           $(".top").append(val);
         } else {
           var val = '<div class="dui-layout-lg top-con">'+
+                '<div class="top-con-left" style="display: inline-block;">'+
+                  '<img src="{{helper.cdnhost}}/assets/img/top_phone.png" alt="" class="top_400">'+
+                  '<span style="font-size: 12px;color: #666;margin-left: 3px">400-010-8000</span>'+
+                '</div>'+
+                '<ul class="top-con-center">'+
+                  '<li class="{{'active' if tdk.pagekey == 'HOME'}}"><a href="{{ helper.urlgen('branch_home','c='+tdk.cityid) }}">出国留学</a></li>'+
+                  '<li class="{{'active' if tdk.pagekey == 'YIMIN_HOME'}}"><a href="{{ helper.urlgen('yimin') }}">海外移民</a></li>'+
+                  '<li class="{{'active' if tdk.pagekey == 'PROFILE'}}"><a href="{{ helper.urlgen('about') }}">关于我们</a></li>'+
+                '</ul>'+
                 '<div class="top-con-right">'+
                 '<ul>';
           if (login_nickname.usertype == 1) {
