--- a/views/login/loginUser.html
+++ b/views/login/loginUser.html
@@ -143,15 +143,12 @@
 </head>
 <body>
 {% include "widget/common_hide/common_hide.html"%}
-  {#{% include "widget/top/top.html" %}#}
   <div class="top" style="position:relative;z-index: 1002;">
   </div>
-
   <div class="main" style="margin: 0 auto;">
     {% import "widget/new_nav_first/nav_login.html" as nav_login %}
     {{ nav_login.nav_login(tdk,helper) }}
   </div>
-
   <div class="login_overseas clearfix">
     <div style="margin: 0px auto;height: 550px;width: 100%;background: url({{helper.cdnhost}}/assets/img/login_background1.png);
     background-repeat: no-repeat;background-size: cover;background-position-x: -200px;">{# #}
@@ -259,18 +256,25 @@
       ©2009 金吉列出国留学咨询服务有限公司 版权所有 京ICP备05010035号&nbsp;&nbsp;&nbsp;&nbsp;留学投诉电话4006-213-315&nbsp;&nbsp;&nbsp;&nbsp;投诉邮箱：315@jjl.cn
     </div>
   </div>
-  <!-- <script src="{{helper.cdnhost}}/assets/js/top.js"></script> -->
   <script src="{{helper.cdnhost}}/assets/js/sha1.js" type="text/javascript" charset="utf-8"></script>
   <script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
 <script>
     $(document).ready(function () {
-
         var login_nickname = JSON.parse(cookie('login_ss'));
         var h = window.location.href;
         var hhh = h.split("?");
         var user_type;
         if (login_nickname == null) {
           var val = '<div class="dui-layout-lg top-con">'+
+                '<div class="top-con-left" style="display: inline-block;">'+
+                  '<img src="{{helper.cdnhost}}/assets/img/top_phone.png" alt="" class="top_400">'+
+                  '<span style="font-size: 12px;color: #666;margin-left: 3px">400-010-8000</span>'+
+                '</div>'+
+                '<ul class="top-con-center">'+
+                  '<li class="{{'active' if tdk.pagekey == 'HOME'}}"><a href="{{ helper.urlgen('branch_home','c='+tdk.cityid) }}">出国留学</a></li>'+
+                  '<li class="{{'active' if tdk.pagekey == 'YIMIN_HOME'}}"><a href="{{ helper.urlgen('yimin') }}">海外移民</a></li>'+
+                  '<li class="{{'active' if tdk.pagekey == 'PROFILE'}}"><a href="{{ helper.urlgen('about') }}">关于我们</a></li>'+
+                '</ul>'+
                 '<div class="top-con-right">';
                 if (hhh[1]) {
                   val += '<span><a href="' + fn.urlgen("register")+"?"+hhh[1] + '" class="dui-text-warning-ss" rel="nofollow">注册</a></span>';
@@ -284,6 +288,15 @@
           $(".top").append(val);
         } else {
           var val = '<div class="dui-layout-lg top-con">'+
+                '<div class="top-con-left" style="display: inline-block;">'+
+                  '<img src="{{helper.cdnhost}}/assets/img/top_phone.png" alt="" class="top_400">'+
+                  '<span style="font-size: 12px;color: #666;margin-left: 3px">400-010-8000</span>'+
+                '</div>'+
+                '<ul class="top-con-center">'+
+                  '<li class="{{'active' if tdk.pagekey == 'HOME'}}"><a href="{{ helper.urlgen('branch_home','c='+tdk.cityid) }}">出国留学</a></li>'+
+                  '<li class="{{'active' if tdk.pagekey == 'YIMIN_HOME'}}"><a href="{{ helper.urlgen('yimin') }}">海外移民</a></li>'+
+                  '<li class="{{'active' if tdk.pagekey == 'PROFILE'}}"><a href="{{ helper.urlgen('about') }}">关于我们</a></li>'+
+                '</ul>'+
                 '<div class="top-con-right">'+
                 '<ul>';
           if (login_nickname.usertype == 1) {
@@ -300,9 +313,7 @@
                 '</div>';
           $(".top").append(val);
         }
-
     //图片验证码
-
     $.ajax({
       url:"/param_code",
       type: "get",
