--- a/views/widget/new_nav_first/home_nav.html
+++ b/views/widget/new_nav_first/home_nav.html
@@ -5,13 +5,10 @@
             <a  target="_blank" href="{{ helper.urlgen('branch_home','c='+tdk.cityid) }}"><img src="{{helper.cdnhost}}/assets/img/logo_red.png" alt="金吉列留学官网"/></a>
         </div>
         <ul class="page-type">
-            <!-- <li class="type-nav small-nav {{'active' if tdk.pagekey == 'HOME'}}"><a href="{{ helper.urlgen('branch_home','c='+tdk.cityid) }}">留学</a></li> -->
-            <li class="type-nav middle-nav {{'active' if tdk.pagekey == 'ARTICLELIST'}}"><a href="{{helper.urlgen('articles')}}">留学攻略</a></li>
-            <li class="type-nav middle-nav {{'active' if tdk.pagekey == 'CHIEF'}}"><a href="{{helper.urlgen('chief')}}">推荐顾问</a></li>
-            <li class="type-nav middle-nav {{'active' if tdk.pagekey == 'CONVERGE_ADVISER'}}"><a href="{{helper.urlgen('adviser')}}">留学顾问</a></li>
-            <!-- <li class="type-nav middle-nav"><a href="{{helper.urlgen('case')}}">留学案例</a></li> -->
-            <li class="type-nav small-nav {{'active' if tdk.pagekey == 'YIMIN_HOME'}}"><a href="{{ helper.urlgen('yimin') }}">海外移民</a></li>
-            <li class="type-nav big-nav {{'active' if tdk.pagekey == 'PROFILE'}}"><a href="{{ helper.urlgen('about') }}">关于我们</a></li>
+            <li class="type-nav {{'active' if tdk.pagekey == 'ARTICLELIST'}}"><a href="{{helper.urlgen('articles')}}">留学攻略</a></li>
+            <li class="type-nav {{'active' if tdk.pagekey == 'CHIEF'}}"><a href="{{helper.urlgen('chief')}}">推荐顾问</a></li>
+            <li class="type-nav {{'active' if tdk.pagekey == 'CONVERGE_ADVISER'}}"><a href="{{helper.urlgen('adviser')}}">留学顾问</a></li>
+            <!-- <li class="type-nav"><a href="{{helper.urlgen('case')}}">留学案例</a></li> -->
         </ul>
         <div class="nav-right">
             <div class="new-city" id="new-city">
