--- a/views/widget/new_nav_first/new_nav_first.css
+++ b/views/widget/new_nav_first/new_nav_first.css
@@ -27,18 +27,15 @@ form, input {
     float: left;
     margin-right: 20px;
 }
-.new_nav_first_red .new_nav_first .new-logo-left {
-    margin-right: 30px;
-}
 .new_nav_first .new-logo-left img{
     display: block;
     float: left;
     margin-top: 10px;
 }
 .new_nav_first .page-type{
-    width: 590px;/*542px;*/
     margin-top: 26px;
     float: left;
+    margin-left: 20px;
 }
 .new_nav_first .page-type .back-home-nav {
     width: 80px;
@@ -58,14 +55,7 @@ form, input {
     border: 1px solid transparent;
     padding: 0 20px;
 }
-.new_nav_first .page-type .type-nav.small-nav {
-    /* width: 74px; */
-}
-.new_nav_first .page-type .type-nav.middle-nav {
-    /* width: 110px; */
-}
 .new_nav_first .page-type .type-nav.big-nav {
-    /* width: 128px; */
     margin-right: 0;
 }
 .new_nav_first .page-type li.active{
@@ -90,15 +80,8 @@ form, input {
 .new_nav_first_red .new_nav_first .page-type li.active a{
     color: #fff;
 }
-.new_nav_first_white.yimin_nav .page-type,.new_nav_first_red.yimin_nav .page-type {
-    width: 500px;
-}
-.new_nav_first .page-type{
-    float: left;
-}
 .new_nav_first .nav-right{
     float: right;
-    width: 400px;/*438px;*/
 }
 .new_nav_first_red .nav-right-short {
     width: 390px;
@@ -173,20 +156,6 @@ form, input {
     /*top:-2px;*/
     left: 0;
 }
-
-
-/*.new-city-box{position: absolute;z-index: 999;display:none;
-    right: 0;top:65px;top:60px \0; width: 584px; background: #fff; border-top: 2px solid #D41B2B;}
-.new-city-box .arrow{position: absolute; top:-9px; left: 112px; width: 5px; height: 9px; display: inline-block;}
-.new-city-box .city-cont{border: 1px solid #D2D2D2; border-top: none; padding: 18px 0 10px 0;}
-.new-city-box .city-cont a{float: left; width: 70px; text-align: center; padding: 0 5px; display: block; color: #666; font-size:14px; line-height: 28px;cursor: pointer}
-.new-city-box .city-cont a:hover{color: #C13232;}
-/!*.new-city:hover .new-city-box{
-    display: block;
-}*!/
-.new-city.hover .new-city-box{
-    display: block;
-}*/
 .new-city:hover .new-city-box{
     display: block;
 }
