--- a/views/widget/new_nav_first/new_nav_red.html
+++ b/views/widget/new_nav_first/new_nav_red.html
@@ -4,20 +4,11 @@
         <div class="new-logo-left">
             <a  target="_blank" href="{{ helper.urlgen('branch_home','c='+tdk.cityid) }}"><img src="{{helper.cdnhost}}/assets/img/logo_transparent.png" alt="金吉列留学官网"/></a>
         </div>
-        <ul class="page-type" style="width: 600px;">
-            <!-- <li class="type-nav small-nav {{'active' if tdk.pagekey == 'HOME'}}"><a href="{{ helper.urlgen('branch_home','c='+tdk.cityid) }}">留学</a></li> -->
-            <li class="back-home-nav" style="margin-right: 10px;"><a href="{{ helper.urlgen('branch_home','c='+tdk.cityid) }}"><img src="{{helper.cdnhost}}/assets/img/back_to_home_page_ic@2x.png" alt=""></a></li>
-            <li class="type-nav middle-nav {{'active' if tdk.pagekey == 'ARTICLELIST'}}"
-              style="padding: 0 14px;"><a href="{{helper.urlgen('articles')}}">留学攻略</a></li>
-            <li class="type-nav middle-nav {{'active' if tdk.pagekey == 'CHIEF'}}"
-              style="padding: 0 14px;"><a href="{{helper.urlgen('chief')}}">推荐顾问</a></li>
-            <li class="type-nav middle-nav {{'active' if tdk.pagekey == 'CONVERGE_ADVISER'}}"
-              style="padding: 0 14px;"><a href="{{helper.urlgen('adviser')}}">留学顾问</a></li>
-            <!-- <li class="type-nav middle-nav {{'active' if tdk.pagekey == 'CASE'}}"><a href="{{helper.urlgen('case')}}">留学案例</a></li> -->
-            <li class="type-nav small-nav {{'active' if tdk.pagekey == 'YIMIN_HOME'}}"
-              style="padding: 0 14px;"><a href="{{ helper.urlgen('yimin') }}">海外移民</a></li>
-            <li class="type-nav big-nav {{'active' if tdk.pagekey == 'PROFILE'}}"
-              style="padding: 0 14px;"><a href="{{ helper.urlgen('about') }}">关于我们</a></li>
+        <ul class="page-type">
+            <li class="back-home-nav"><a href="{{ helper.urlgen('branch_home','c='+tdk.cityid) }}"><img src="{{helper.cdnhost}}/assets/img/back_to_home_page_ic@2x.png" alt=""></a></li>
+            <li class="type-nav {{'active' if tdk.pagekey == 'ARTICLELIST'}}"><a href="{{helper.urlgen('articles')}}">留学攻略</a></li>
+            <li class="type-nav {{'active' if tdk.pagekey == 'CHIEF'}}"><a href="{{helper.urlgen('chief')}}">推荐顾问</a></li>
+            <li class="type-nav {{'active' if tdk.pagekey == 'CONVERGE_ADVISER'}}"><a href="{{helper.urlgen('adviser')}}">留学顾问</a></li>
         </ul>
         <div class="nav-right">
             <div class="new-city" id="new-city">
