--- a/views/widget/top/top.html
+++ b/views/widget/top/top.html
@@ -319,10 +319,15 @@ input[type="checkbox"] {
     var user_type;
     if (login_nickname == null) {
       var val = '<div class="dui-layout-lg top-con" style="position: relative;">'+
-                '<div class="top-con-left" style="display: inline-block;width: 50%;">'+
+                '<div class="top-con-left" style="display: inline-block;">'+
                 '<img src="{{helper.cdnhost}}/assets/img/top_phone.png" alt="" class="top_400">'+
                 '<span style="font-size: 12px;color: #666;margin-left: 3px">400-010-8000</span>'+
                 '</div>'+
+                '<ul class="top-con-center">'+
+                  '<li class="{{'active' if tdk.pagekey == 'HOME'}}"><a href="{{ helper.urlgen('branch_home','c='+tdk.cityid) }}">出国留学</a></li>'+
+                  '<li class="{{'active' if tdk.pagekey == 'YIMIN_HOME'}}"><a href="{{ helper.urlgen('yimin') }}">海外移民</a></li>'+
+                  '<li class="{{'active' if tdk.pagekey == 'PROFILE'}}"><a href="{{ helper.urlgen('about') }}">关于我们</a></li>'+
+                '</ul>'+
                 '<div class="top-con-right">'+
                 '<span><a target="_blank" id="getloginUser" class="dui-text-warning-ss" rel="nofollow">注册</a></span>'+
                 '<span class="bor"></span>'+
@@ -332,10 +337,15 @@ input[type="checkbox"] {
       $(".top").append(val);
     } else {
       var val = '<div class="dui-layout-lg top-con" style="position: relative;">'+
-                '<div class="top-con-left" style="display: inline-block;width: 40%;">'+
+                '<div class="top-con-left" style="display: inline-block;">'+
                 '<img src="{{helper.cdnhost}}/assets/img/top_phone.png" alt="" class="top_400" style="margin-right: 3px;">'+
                 '<span style="font-size: 12px;color: #666;margin-left: 3px">400-010-8000</span>'+
                 '</div>'+
+                '<ul class="top-con-center">'+
+                  '<li class="{{'active' if tdk.pagekey == 'HOME'}}"><a href="{{ helper.urlgen('branch_home','c='+tdk.cityid) }}">出国留学</a></li>'+
+                  '<li class="{{'active' if tdk.pagekey == 'YIMIN_HOME'}}"><a href="{{ helper.urlgen('yimin') }}">海外移民</a></li>'+
+                  '<li class="{{'active' if tdk.pagekey == 'PROFILE'}}"><a href="{{ helper.urlgen('about') }}">关于我们</a></li>'+
+                '</ul>'+
                 '<div class="top-con-right">'+
                 '<ul>';
       if (login_nickname.usertype == 1) {
@@ -355,8 +365,6 @@ input[type="checkbox"] {
 
   })
 </script>
-
-
 {#{% if login_nickname == '' %}
 <div class="top">
   <div class="dui-layout-lg top-con">
@@ -377,7 +385,6 @@ input[type="checkbox"] {
       </div>
   </div>
 </div>
-
 {% endif%}#}
 {#{% if login_nickname != ''%}
 <div class="top">
@@ -405,5 +412,4 @@ input[type="checkbox"] {
     </div>
   </div>
 </div>
-
 {% endif %}#}
