--- a/views/widget/top/top_login.html
+++ b/views/widget/top/top_login.html
@@ -274,10 +274,15 @@ input[type="checkbox"] {
     var user_type;
     if (login_nickname == null) {
       var val = '<div class="dui-layout-lg top-con">'+
-                '<div class="top-con-left" style="display: inline-block;width: 50%;">'+
+                '<div class="top-con-left" style="display: inline-block;">'+
                 '<img src="{{helper.cdnhost}}/assets/img/top_phone.png" alt="" class="top_400">'+
                 '<span style="font-size: 12px;color: #666;margin-left: 3px">400-010-8000</span>'+
                 '</div>'+
+                '<ul class="top-con-center">'+
+                  '<li class="{{'active' if tdk.pagekey == 'HOME'}}"><a href="{{ helper.urlgen('branch_home','c='+tdk.cityid) }}">出国留学</a></li>'+
+                  '<li class="{{'active' if tdk.pagekey == 'YIMIN_HOME'}}"><a href="{{ helper.urlgen('yimin') }}">海外移民</a></li>'+
+                  '<li class="{{'active' if tdk.pagekey == 'PROFILE'}}"><a href="{{ helper.urlgen('about') }}">关于我们</a></li>'+
+                '</ul>'+
                 '<div class="top-con-right">'+
                 '<span><a target="_blank" id="getloginUser" class="dui-text-warning-ss" rel="nofollow">注册</a></span>'+
                 '<span class="bor"></span>'+
@@ -291,6 +296,11 @@ input[type="checkbox"] {
                 '<img src="{{helper.cdnhost}}/assets/img/top_phone.png" alt="" class="top_400" style="margin-right: 3px;">'+
                 '<span style="font-size: 12px;color: #666;margin-left: 3px">400-010-8000</span>'+
                 '</div>'+
+                '<ul class="top-con-center">'+
+                  '<li class="{{'active' if tdk.pagekey == 'HOME'}}"><a href="{{ helper.urlgen('branch_home','c='+tdk.cityid) }}">出国留学</a></li>'+
+                  '<li class="{{'active' if tdk.pagekey == 'YIMIN_HOME'}}"><a href="{{ helper.urlgen('yimin') }}">海外移民</a></li>'+
+                  '<li class="{{'active' if tdk.pagekey == 'PROFILE'}}"><a href="{{ helper.urlgen('about') }}">关于我们</a></li>'+
+                '</ul>'+
                 '<div class="top-con-right">'+
                 '<ul>';
       if (login_nickname.usertype == 1) {
@@ -312,12 +322,8 @@ input[type="checkbox"] {
 </script>
 <script src="{{helper.cdnhost}}/assets/js/sha1.js" type="text/javascript" charset="utf-8"></script>
 <script src="{{helper.cdnhost}}/dep/js/layer/layer.js"></script>
-
-
 <script>
     $(function() {
-
-    // $("form").Vaild();
     //登录
     var pac_d = document.getElementById('getloginUser_deng');
     if (pac_d) {
