修改移民案例页

--- a/views/widget/new_nav_first/common_nav.html
+++ b/views/widget/new_nav_first/common_nav.html
@@ -13,8 +13,8 @@
             <li class="type-nav"><a href="{{helper.urlgen('articles')}}">留学攻略</a></li>
             <li class="type-nav {{'active' if tdk.pagekey == 'CHIEF'}}"><a href="{{helper.urlgen('chief')}}">推荐顾问</a></li>
             <li class="type-nav"><a href="{{helper.urlgen('adviser')}}">留学顾问</a></li>
-            <li class="type-nav {{'active' if tdk.pagekey == 'YIMIN_HOME'}}"><a href="{{ helper.urlgen('yimin') }}">移民项目</a></li>
-            <li class="type-nav {{'active' if tdk.pagekey == 'HOME'}}"><a href="{{ helper.urlgen('case') }}">移民案列</a></li>
+            <li class="type-nav"><a href="//www.jjl.cn/zt/2019/20190228_yiminsj/index.html">移民项目</a></li>
+            <li class="type-nav {{'active' if tdk.pagekey == 'YIMIN_CASE'}}"><a href="{{ helper.urlgen('yimin_case') }}">移民案列</a></li>
         </ul>
         <div class="nav-right nav-right-short" style="width: auto;">
             <div class="new-searchs new-home-search">
