--- a/views/widget/new_nav_first/yimin_search_nav.html
+++ b/views/widget/new_nav_first/yimin_search_nav.html
@@ -5,8 +5,8 @@
             <a  target="_blank" href="{{ helper.urlgen('yimin') }}"><img src="{{helper.cdnhost}}/assets/img/yimin_logo_transparent.png" alt="金吉列移民官网" style="width:215px;"/></a>
         </div>
         <ul class="page-type">
-            <li class="type-nav {{'active' if tdk.pagekey == 'YIMIN_HOME'}}"><a href="{{ helper.urlgen('yimin') }}">热点项目</a></li>
-            <li class="type-nav {{'active' if tdk.pagekey == 'HOME'}}"><a href="{{ helper.urlgen('case') }}">成功案列</a></li>
+            <li class="type-nav"><a href="//www.jjl.cn/zt/2019/20190228_yiminsj/index.html">热点项目</a></li>
+            <li class="type-nav {{'active' if tdk.pagekey == 'YIMIN_CASE'}}"><a href="{{ helper.urlgen('yimin_case') }}">成功案列</a></li>
         </ul>
         <div class="nav-right">
             <div class="new-searchs new-home-search">
