--- a/views/widget/top/top_yimin.html
+++ b/views/widget/top/top_yimin.html
@@ -288,9 +288,9 @@ input[type="checkbox"] {
                 '<span style="font-size: 12px;color: #666;margin-left: 3px">400-010-8000</span>'+
                 '</div>'+
                 '<ul class="top-con-center yimin-con-center">'+
-                  '<li class="{{'active' if tdk.pagekey == 'HOME'}}"><a href="{{ helper.urlgen('branch_home','c='+tdk.cityid) }}">出国留学</a></li>'+
-                  '<li class="{{'active' if tdk.pagekey == 'YIMIN_HOME'}}"><a href="{{ helper.urlgen('yimin') }}">海外移民</a></li>'+
-                  '<li class="{{'active' if tdk.pagekey == 'PROFILE'}}"><a href="{{ helper.urlgen('about') }}">关于我们</a></li>'+
+                  '<li><a href="{{ helper.urlgen('branch_home','c='+tdk.cityid) }}">出国留学</a></li>'+
+                  '<li class="active"><a href="{{ helper.urlgen('yimin') }}">海外移民</a></li>'+
+                  '<li><a href="{{ helper.urlgen('about') }}">关于我们</a></li>'+
                 '</ul>'+
                 '<div class="top-con-right">'+
                 '<span><a target="_blank" id="getloginUser" class="dui-text-warning-ss" rel="nofollow">注册</a></span>'+
@@ -311,9 +311,9 @@ input[type="checkbox"] {
                 '<span style="font-size: 12px;color: #666;margin-left: 3px">400-010-8000</span>'+
                 '</div>'+
                 '<ul class="top-con-center yimin-con-center">'+
-                  '<li class="{{'active' if tdk.pagekey == 'HOME'}}"><a href="{{ helper.urlgen('branch_home','c='+tdk.cityid) }}">出国留学</a></li>'+
-                  '<li class="{{'active' if tdk.pagekey == 'YIMIN_HOME'}}"><a href="{{ helper.urlgen('yimin') }}">海外移民</a></li>'+
-                  '<li class="{{'active' if tdk.pagekey == 'PROFILE'}}"><a href="{{ helper.urlgen('about') }}">关于我们</a></li>'+
+                  '<li><a href="{{ helper.urlgen('branch_home','c='+tdk.cityid) }}">出国留学</a></li>'+
+                  '<li class="active"><a href="{{ helper.urlgen('yimin') }}">海外移民</a></li>'+
+                  '<li><a href="{{ helper.urlgen('about') }}">关于我们</a></li>'+
                 '</ul>'+
                 '<div class="top-con-right">'+
                 '<ul>';
