--- a/views/index.html
+++ b/views/index.html
@@ -452,30 +452,29 @@
         window.location.href = $(this).attr("href");
       }
     });
-      //
-      $(window).on('scroll', function () {
-          var $scroll = $(this).scrollTop();
-          if ($scroll >= 250) {
-              $('.nationality_guoqi_warp').show();
-          } else {
-              $('.nationality_guoqi_warp').hide();
-          }
-      });
-      $(".liuxue-guoqi ").on('click','a',function () {
-          var id=$(this).attr('href');
-          var $scrolltop = $(id).offset().top;
-          $('html,body').animate({//$('html,body')兼容问题body属于chrome
-              scrollTop:$scrolltop-174
-          })
-      });
-      $('.lunbo_lift .slider').xSlider({
-          //轮播图配置
-          autoplay: 2000,
-          current: 0,
-          speed: 500,
-          intervalTime: 5000,
-          pagination: true
-      });
+    $(window).on('scroll', function () {
+      var $scroll = $(this).scrollTop();
+      if ($scroll >= 250) {
+          $('.nationality_guoqi_warp').show();
+      } else {
+          $('.nationality_guoqi_warp').hide();
+      }
+    });
+    $(".liuxue-guoqi ").on('click','a',function () {
+      var id=$(this).attr('href');
+      var $scrolltop = $(id).offset().top;
+      $('html,body').animate({//$('html,body')兼容问题body属于chrome
+          scrollTop:$scrolltop-174
+      })
+    });
+    $('.lunbo_lift .slider').xSlider({
+      //轮播图配置
+      autoplay: 2000,
+      current: 0,
+      speed: 500,
+      intervalTime: 5000,
+      pagination: true
+    });
     //top
     var addEvent = function(element,type,callback){
       if(element.addEventListener){
@@ -515,70 +514,59 @@
       $("#weixin_").css("display", "none");
     });
   })
-
   //top切换
   var login_nickname = JSON.parse(cookie('login_ss'));
-      // console.log('login_nickname',login_nickname);
-      var userinfo_num = $('.top').data('uinfo')
-      // console.log('userinfo_num',userinfo_num);
-      var user_type;
-      if (login_nickname == null) {
-        // var val = '<div class="dui-layout-lg top-con" style="position: relative;">'+
-        //           '<div class="top-con-right">'+
-        //           '<span><a target="_blank" id="getloginUser" class="dui-text-warning-ss" rel="nofollow">注册</a></span>'+
-        //           '<span class="bor"></span>'+
-        //           '<span ><a href="javascript:void(0);" style="background: #fff;" id="getloginUser_deng" class="dui-text-warning-ss" rel="nofollow">登录</a></span>'+
-        //           '<span class="bor">|</span>'+
-        //           '<span id="weixin" class="top_weibo_img"><img src="{{helper.cdnhost}}/assets/img/top_weixin.png"/></span>'+
-        //           '<span id="weixin_" class="top_weibo" style="background: url('+ajaxUrlPrefix.cdnhost+'/assets/img/top_liuxue_weixin.png);display: none;"></span>'+
-        //           '<span id="weibo_top" class="top_weibo_img"><img src="{{helper.cdnhost}}/assets/img/top_weibo.png"/></span>'+
-        //           '<span id="weibo_"class="top_weibo" style="background: url('+ajaxUrlPrefix.cdnhost+'/assets/img/top_liuxue_weibo.png);display: none;"></span>'+
-        //           '</div>'+
-        //           '</div>'
-        // $(".top").append(val);
-      } else {
-        $(".top").empty();
-        
-        var val = '<div class="dui-layout-lg top-con" style="position: relative;">'+
-                  '<div class="top-con-left" style="display: inline-block;width: 40%;">'+
-                  '<img src="{{helper.cdnhost}}/assets/img/top_phone.png" alt="" class="top_400" style="margin-right: 3px;">'+
-                  '<span style="font-size: 12px;color: #666;">400-010-8000</span>'+
-                  '</div>'+
-                  '<div class="top-con-right">'+
-                  '<ul>';
-        if (userinfo_num != 0) {
-          if (login_nickname.usertype == 1) {
-            val += '<li class="msg-icon iconfont nav-name" style="position: relative;"><a style="font-size: 12px;" target="_blank" href="' + fn.urlgen("user_center", "revmsg") + '" rel="nofollow">消息</a><i class="text_shu" style="font-size: 12px;">'+userinfo_num+'</i></li>';
-          } else if (login_nickname.usertype == 2) {
-            val += '<li class="msg-icon iconfont nav-name" style="position: relative;"><a style="font-size: 12px;" target="_blank" href="' + fn.urlgen("advisor_center", "revmsg") + '" rel="nofollow">消息</a><i class="text_shu" style="font-size: 12px;">'+userinfo_num+'</i></li>';
-          }
-        } else {
-          if (login_nickname.usertype == 1) {
-            val += '<li class="msg-icon iconfont nav-name" style="position: relative;"><a style="font-size: 12px;" target="_blank" href="' + fn.urlgen("user_center", "revmsg") + '" rel="nofollow">消息</a></li>';
-          } else if (login_nickname.usertype == 2) {
-            val += '<li class="msg-icon iconfont nav-name" style="position: relative;"><a style="font-size: 12px;" target="_blank" href="' + fn.urlgen("advisor_center", "revmsg") + '" rel="nofollow">消息</a></li>';
-          }
-          
-        }  
-        if (login_nickname.usertype == 1) {
-          val += '<li><i class="msg-icon iconfont nav-name">&#xe675;</i><span><a target="_blank" href="' + fn.urlgen("user_center", "revcomment") + '" rel="nofollow">'+ login_nickname.nickname +'</a></span></li>';
-        } else if (login_nickname.usertype == 2) {
-          val += '<li><i class="msg-icon iconfont nav-name">&#xe675;</i><span><a target="_blank" href="' + fn.urlgen("advisor_center") + '" rel="nofollow">'+ login_nickname.nickname +'</a></span></li>';
-        }else if (login_nickname.usertype == 3) {
-          val += '<li><i class="msg-icon iconfont nav-name">&#xe675;</i><span><a target="_blank" href="' + fn.urlgen("canzan_center") + '" rel="nofollow">'+ login_nickname.nickname +'</a></span></li>';
-        }
-        val += '<li><span class="bor">|</span></li>'+
-                '<li ><a href="javascript:void(0)" style="background: #fff;" onclick="outlogin()" rel="nofollow">退出</a></li>'+
-                '<li style="margin-right: 10px;"><span class="bor">|</span></li>'+
-                '<li style="margin-left: 0px;"><span class="top_weibo_img"><img id="weixin" src="{{helper.cdnhost}}/assets/img/top_weixin.png"/></span></li>'+
-                '<li style="margin-left: 0px;"><span id="weixin_" class="top_weibo" style="background: url('+ajaxUrlPrefix.cdnhost+'/assets/img/top_liuxue_weixin.png);display: none;"></span></li>'+
-                '<li style="margin-left: 0px;"><span class="top_weibo_img"><img id="weibo_top" src="{{helper.cdnhost}}/assets/img/top_weibo.png"/></span></li>'+
-                '<li style="margin-left: 0px;"><span id="weibo_"class="top_weibo" style="background: url('+ajaxUrlPrefix.cdnhost+'/assets/img/top_liuxue_weibo.png);display: none;"></span></li>'+
-                  '</ul>'+
-                  '</div>'+
-                  '</div>';
-        $(".top").append(val);
+  var userinfo_num = $('.top').data('uinfo')
+  var user_type;
+  if (login_nickname == null) {
+    
+  } else {
+    $(".top").empty();
+    var val = '<div class="dui-layout-lg top-con" style="position: relative;">'+
+              '<div class="top-con-left" style="display: inline-block;">'+
+              '<img src="{{helper.cdnhost}}/assets/img/top_phone.png" alt="" class="top_400" style="margin-right: 3px;">'+
+              '<span style="font-size: 12px;color: #666;">400-010-8000</span>'+
+              '</div>'+
+              '<ul class="top-con-center">'+
+                '<li class="active"><a href="{{ helper.urlgen('branch_home','c='+tdk.cityid) }}">出国留学</a></li>'+
+                '<li><a href="{{ helper.urlgen('yimin') }}">海外移民</a></li>'+
+                '<li><a href="{{ helper.urlgen('about') }}">关于我们</a></li>'+
+              '</ul>'+
+              '<div class="top-con-right">'+
+              '<ul>';
+    if (userinfo_num != 0) {
+      if (login_nickname.usertype == 1) {
+        val += '<li class="msg-icon iconfont nav-name" style="position: relative;"><a style="font-size: 12px;" target="_blank" href="' + fn.urlgen("user_center", "revmsg") + '" rel="nofollow">消息</a><i class="text_shu" style="font-size: 12px;">'+userinfo_num+'</i></li>';
+      } else if (login_nickname.usertype == 2) {
+        val += '<li class="msg-icon iconfont nav-name" style="position: relative;"><a style="font-size: 12px;" target="_blank" href="' + fn.urlgen("advisor_center", "revmsg") + '" rel="nofollow">消息</a><i class="text_shu" style="font-size: 12px;">'+userinfo_num+'</i></li>';
       }
+    } else {
+      if (login_nickname.usertype == 1) {
+        val += '<li class="msg-icon iconfont nav-name" style="position: relative;"><a style="font-size: 12px;" target="_blank" href="' + fn.urlgen("user_center", "revmsg") + '" rel="nofollow">消息</a></li>';
+      } else if (login_nickname.usertype == 2) {
+        val += '<li class="msg-icon iconfont nav-name" style="position: relative;"><a style="font-size: 12px;" target="_blank" href="' + fn.urlgen("advisor_center", "revmsg") + '" rel="nofollow">消息</a></li>';
+      }
+      
+    }  
+    if (login_nickname.usertype == 1) {
+      val += '<li><i class="msg-icon iconfont nav-name">&#xe675;</i><span><a target="_blank" href="' + fn.urlgen("user_center", "revcomment") + '" rel="nofollow">'+ login_nickname.nickname +'</a></span></li>';
+    } else if (login_nickname.usertype == 2) {
+      val += '<li><i class="msg-icon iconfont nav-name">&#xe675;</i><span><a target="_blank" href="' + fn.urlgen("advisor_center") + '" rel="nofollow">'+ login_nickname.nickname +'</a></span></li>';
+    }else if (login_nickname.usertype == 3) {
+      val += '<li><i class="msg-icon iconfont nav-name">&#xe675;</i><span><a target="_blank" href="' + fn.urlgen("canzan_center") + '" rel="nofollow">'+ login_nickname.nickname +'</a></span></li>';
+    }
+    val += '<li><span class="bor">|</span></li>'+
+            '<li ><a href="javascript:void(0)" style="background: #fff;" onclick="outlogin()" rel="nofollow">退出</a></li>'+
+            '<li style="margin-right: 10px;"><span class="bor">|</span></li>'+
+            '<li style="margin-left: 0px;"><span class="top_weibo_img"><img id="weixin" src="{{helper.cdnhost}}/assets/img/top_weixin.png"/></span></li>'+
+            '<li style="margin-left: 0px;"><span id="weixin_" class="top_weibo" style="background: url('+ajaxUrlPrefix.cdnhost+'/assets/img/top_liuxue_weixin.png);display: none;"></span></li>'+
+            '<li style="margin-left: 0px;"><span class="top_weibo_img"><img id="weibo_top" src="{{helper.cdnhost}}/assets/img/top_weibo.png"/></span></li>'+
+            '<li style="margin-left: 0px;"><span id="weibo_"class="top_weibo" style="background: url('+ajaxUrlPrefix.cdnhost+'/assets/img/top_liuxue_weibo.png);display: none;"></span></li>'+
+              '</ul>'+
+              '</div>'+
+              '</div>';
+    $(".top").append(val);
+  }
 </script>
 </body>
 </html>
