--- a/views/widget/new_nav_first/yimin_search_nav.html
+++ b/views/widget/new_nav_first/yimin_search_nav.html
@@ -6,7 +6,7 @@
         </div>
         <ul class="page-type">
             <li class="type-nav"><a href="//www.jjl.cn/zt/2019/20190228_yiminsj/index.html">热点项目</a></li>
-            <li class="type-nav {{'active' if tdk.pagekey == 'YIMIN_CASE'}}"><a href="{{ helper.urlgen('yimin_case') }}">成功案列</a></li>
+            <li class="type-nav {{'active' if tdk.pagekey == 'YIMIN_CASE'}}"><a href="{{ helper.urlgen('yimin_case') }}">成功案例</a></li>
         </ul>
         <div class="nav-right">
             <div class="new-searchs new-home-search">
