--- a/views/yimin_case.html
+++ b/views/yimin_case.html
@@ -28,6 +28,10 @@
       width: 300px;
       height: 210px;
     }
+    .yimin-c-dl dt img {
+      display: block;
+      height: 100%;
+    }
     .yimin-c-dl dd {
       float: left;
       padding: 0 24px 0 30px;
