修改移民边框和字错误

--- a/views/release_article_yimin.html
+++ b/views/release_article_yimin.html
@@ -244,7 +244,7 @@
               </label>
               <span class="recommend-sel" >
                 <i class="level-sel-i iconfont"></i>
-                <i>移民咨讯</i>
+                <i>移民资讯</i>
               </span>
               <span class="recommend-sel" >
                 <i class="level-sel-i iconfont"></i>
