修改导航栏

--- a/views/widget/new_nav_first/nav_login.html
+++ b/views/widget/new_nav_first/nav_login.html
@@ -4,7 +4,7 @@
         <div class="new-logo-left">
             <a  target="_blank" href="{{ helper.urlgen('branch_home','c='+tdk.cityid) }}"><img src="{{helper.cdnhost}}/assets/img/logo_common_black.png" alt="金吉列官网"/></a>
         </div>
-        <ul class="page-type">
+        <ul class="page-type" style="margin-left: 46px;">
             <li class="type-nav {{'active' if tdk.pagekey == 'ARTICLELIST'}}"><a href="{{helper.urlgen('articles')}}">留学攻略</a></li>
             <li class="type-nav {{'active' if tdk.pagekey == 'CHIEF'}}"><a href="{{helper.urlgen('chief')}}">推荐顾问</a></li>
             <li class="type-nav {{'active' if tdk.pagekey == 'ADVISER'}}"><a href="{{helper.urlgen('adviser')}}">留学顾问</a></li>
