--- a/views/widget/top/top_liuxue.html
+++ b/views/widget/top/top_liuxue.html
@@ -1,7 +1,7 @@
 <div class="top" style="position:relative;z-index: 1002;" data-uinfo="{{index_userinfo.unread_num}}">
   <div class="dui-layout-lg top-con clearfix" style="position: relative;width: 1200px;">
     <div class="top-con-left" style="display: inline-block;">
-      <img src="{{helper.cdnhost}}/assets/img/top_phone.png" alt="" class="top_400">
+      <img src="{{helper.cdnhost}}/assets/img/top_phone.png" alt="">
       <span style="font-size: 12px;color: #666;">400-010-8000</span>
     </div>
     <ul class="top-con-center">
@@ -224,10 +224,6 @@
     display: inline-block;
     margin-right: 5px;
     background: url({{helper.cdnhost}}/assets/img/login_error_1.png)
-  }
-  .top_400{
-    width: 12px;
-    height: 12px;
   }
   .text_shu{
     width: 18px;
