--- a/views/index.html
+++ b/views/index.html
@@ -524,7 +524,7 @@
     $(".top").empty();
     var val = '<div class="dui-layout-lg top-con" style="position: relative;">'+
               '<div class="top-con-left" style="display: inline-block;">'+
-              '<img src="{{helper.cdnhost}}/assets/img/top_phone.png" alt="" class="top_400" style="margin-right: 3px;">'+
+              '<img src="{{helper.cdnhost}}/assets/img/top_phone.png" alt="" >'+
               '<span style="font-size: 12px;color: #666;">400-010-8000</span>'+
               '</div>'+
               '<ul class="top-con-center">'+
