--- a/views/login/loginUser.html
+++ b/views/login/loginUser.html
@@ -267,7 +267,7 @@
         if (login_nickname == null) {
           var val = '<div class="dui-layout-lg top-con">'+
                 '<div class="top-con-left" style="display: inline-block;">'+
-                  '<img src="{{helper.cdnhost}}/assets/img/top_phone.png" alt="" class="top_400">'+
+                  '<img src="{{helper.cdnhost}}/assets/img/top_phone.png" alt="">'+
                   '<span style="font-size: 12px;color: #666;margin-left: 3px">400-010-8000</span>'+
                 '</div>'+
                 '<ul class="top-con-center">'+
@@ -289,7 +289,7 @@
         } else {
           var val = '<div class="dui-layout-lg top-con">'+
                 '<div class="top-con-left" style="display: inline-block;">'+
-                  '<img src="{{helper.cdnhost}}/assets/img/top_phone.png" alt="" class="top_400">'+
+                  '<img src="{{helper.cdnhost}}/assets/img/top_phone.png" alt="">'+
                   '<span style="font-size: 12px;color: #666;margin-left: 3px">400-010-8000</span>'+
                 '</div>'+
                 '<ul class="top-con-center">'+
