--- a/views/widget/new_nav_first/yimin_nav.html
+++ b/views/widget/new_nav_first/yimin_nav.html
@@ -1,10 +1,10 @@
 {% macro yimin_nav(tdk,helper) %}
 <div class="new_nav_first_white yimin_nav"  style="min-width: 1200px;">
     <div class="new_nav_first clearfix">
-        <div class="new-logo-left">
+        <div class="new-logo-left" style="margin-right: 0;">
             <a  target="_blank" href="{{ helper.urlgen('yimin') }}"><img src="{{helper.cdnhost}}/assets/img/yimin_logo_black.png" alt="金吉列移民官网"/></a>
         </div>
-        <ul class="page-type">
+        <ul class="page-type" style="margin-left: 17px;">
             <li class="type-nav"><a href="//www.jjl.cn/zt/2019/20190228_yiminsj/index.html">热点项目</a></li>
             <li class="type-nav {{'active' if tdk.pagekey == 'YIMIN_CASE'}}"><a href="{{ helper.urlgen('yimin_case') }}">成功案例</a></li>
         </ul>
