--- a/views/widget/top/top.html
+++ b/views/widget/top/top.html
@@ -205,11 +205,6 @@ input[type="checkbox"] {
       margin-right: 5px;
       background: url({{helper.cdnhost}}/assets/img/login_error_1.png)
     }
-    .top_400{
-      width: 12px;
-      height: 12px;
-
-    }
     .text_shu{
       width: 18px;
       height: 18px;
@@ -320,7 +315,7 @@ input[type="checkbox"] {
     if (login_nickname == null) {
       var val = '<div class="dui-layout-lg top-con" style="position: relative;">'+
                 '<div class="top-con-left" style="display: inline-block;">'+
-                '<img src="{{helper.cdnhost}}/assets/img/top_phone.png" alt="" class="top_400">'+
+                '<img src="{{helper.cdnhost}}/assets/img/top_phone.png" alt="">'+
                 '<span style="font-size: 12px;color: #666;margin-left: 3px">400-010-8000</span>'+
                 '</div>'+
                 '<ul class="top-con-center">'+
@@ -338,7 +333,7 @@ input[type="checkbox"] {
     } else {
       var val = '<div class="dui-layout-lg top-con" style="position: relative;">'+
                 '<div class="top-con-left" style="display: inline-block;">'+
-                '<img src="{{helper.cdnhost}}/assets/img/top_phone.png" alt="" class="top_400" style="margin-right: 3px;">'+
+                '<img src="{{helper.cdnhost}}/assets/img/top_phone.png" alt="">'+
                 '<span style="font-size: 12px;color: #666;margin-left: 3px">400-010-8000</span>'+
                 '</div>'+
                 '<ul class="top-con-center">'+
