--- a/views/widget/top/top_login.html
+++ b/views/widget/top/top_login.html
@@ -275,7 +275,7 @@ input[type="checkbox"] {
     if (login_nickname == null) {
       var val = '<div class="dui-layout-lg top-con">'+
                 '<div class="top-con-left" style="display: inline-block;">'+
-                '<img src="{{helper.cdnhost}}/assets/img/top_phone.png" alt="" class="top_400">'+
+                '<img src="{{helper.cdnhost}}/assets/img/top_phone.png" alt="">'+
                 '<span style="font-size: 12px;color: #666;margin-left: 3px">400-010-8000</span>'+
                 '</div>'+
                 '<ul class="top-con-center">'+
@@ -293,7 +293,7 @@ input[type="checkbox"] {
     } else {
       var val = '<div class="dui-layout-lg top-con" style="position: relative;">'+
                 '<div class="top-con-left" style="display: inline-block;width: 40%;">'+
-                '<img src="{{helper.cdnhost}}/assets/img/top_phone.png" alt="" class="top_400" style="margin-right: 3px;">'+
+                '<img src="{{helper.cdnhost}}/assets/img/top_phone.png" alt="">'+
                 '<span style="font-size: 12px;color: #666;margin-left: 3px">400-010-8000</span>'+
                 '</div>'+
                 '<ul class="top-con-center">'+
