--- a/views/widget/top/top_yimin.html
+++ b/views/widget/top/top_yimin.html
@@ -119,74 +119,67 @@
     cursor: pointer;
   }
   input[type="checkbox"]:checked+label {color: red;}
-
-input[type="checkbox"] + label:before, #xieyi_reg input[type="checkbox"] + label:before {
-  content: "\a0"; /*不换行空格*/
-  display: inline-block;
-  vertical-align: middle;
-  font-size: 18px;
-  width: 14px;
-  height: 13px;
-  margin-right: 10px;
-  border-radius: 50%;
-  border: 1px solid #958c87;
-  font-weight: normal;
-  line-height: 1; 
-  
-}
-
-input[type="checkbox"]:checked + label:before, #xieyi_reg input[type="checkbox"]:checked + label:before{
-  content: "\a0"; /*不换行空格*/
-  display: inline-block;
-  vertical-align: middle;
-  font-size: 18px;
-  width: 10px;
-  height: 9px;
-  margin-right: 10px;
-  border-radius: 50%;
-  border: 1px solid #d31d2c;
-  background-color: #d31d2c;
-  background-clip: content-box;
-  padding: 2px;
-  color: #d31d2c;
-  
-}
-
-input[type="checkbox"] {
-  position: absolute;
-  clip: rect(0, 0, 0, 0);
-}
-.yonghu{
-  display: inline-block;
-  margin-left: -5px;
-  font-size: 14px;
-  color: #333;
-  position: relative;
-}
-.yonghu a{
-  color: #c13232;
-}
-.yonghu span{
-  width: 235px;
-  top: -13px;
-  position: absolute;
-}
-.top_400{
-      width: 12px;
-      height: 12px;
-    }
-    .text_shu{
-      width: 18px;
-      height: 18px;
-      border-radius: 50%;
-      background: #C13232;
-      color: #fff;
-      position: absolute;
-      top: 0px;
-      left: -16px;
-      text-align: center;
-      line-height: 18px;
-    }
+  input[type="checkbox"] + label:before, #xieyi_reg input[type="checkbox"] + label:before {
+    content: "\a0"; /*不换行空格*/
+    display: inline-block;
+    vertical-align: middle;
+    font-size: 18px;
+    width: 14px;
+    height: 13px;
+    margin-right: 10px;
+    border-radius: 50%;
+    border: 1px solid #958c87;
+    font-weight: normal;
+    line-height: 1; 
+    
+  }
+  input[type="checkbox"]:checked + label:before, #xieyi_reg input[type="checkbox"]:checked + label:before{
+    content: "\a0"; /*不换行空格*/
+    display: inline-block;
+    vertical-align: middle;
+    font-size: 18px;
+    width: 10px;
+    height: 9px;
+    margin-right: 10px;
+    border-radius: 50%;
+    border: 1px solid #d31d2c;
+    background-color: #d31d2c;
+    background-clip: content-box;
+    padding: 2px;
+    color: #d31d2c;
+    
+  }
+  input[type="checkbox"] {
+    position: absolute;
+    clip: rect(0, 0, 0, 0);
+  }
+  .yonghu{
+    display: inline-block;
+    margin-left: -5px;
+    font-size: 14px;
+    color: #333;
+    position: relative;
+  }
+  .yonghu a{
+    color: #c13232;
+  }
+  .yonghu span{
+    width: 235px;
+    top: -13px;
+    position: absolute;
+  }
+  .text_shu{
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    background: #C13232;
+    color: #fff;
+    position: absolute;
+    top: 0px;
+    left: -16px;
+    text-align: center;
+    line-height: 18px;
+  }
 </style>
 <!-- 登录 -->
 <div class="l_u" id="l_u" style="display: none;height: 500px;">
@@ -284,10 +277,10 @@ input[type="checkbox"] {
     if (login_nickname == null) {
       var val = '<div class="dui-layout-lg top-con" style="position: relative;">'+
                 '<div class="top-con-left" style="display: inline-block;">'+
-                '<img src="{{helper.cdnhost}}/assets/img/top_phone.png" alt="" class="top_400">'+
+                '<img src="{{helper.cdnhost}}/assets/img/top_phone.png" alt="">'+
                 '<span style="font-size: 12px;color: #666;margin-left: 3px">400-010-8000</span>'+
                 '</div>'+
-                '<ul class="top-con-center yimin-con-center">'+
+                '<ul class="top-con-center">'+
                   '<li><a href="{{ helper.urlgen('branch_home','c='+tdk.cityid) }}">出国留学</a></li>'+
                   '<li class="active"><a href="{{ helper.urlgen('yimin') }}">海外移民</a></li>'+
                   '<li><a href="{{ helper.urlgen('about') }}">关于我们</a></li>'+
@@ -307,10 +300,10 @@ input[type="checkbox"] {
     } else {
       var val = '<div class="dui-layout-lg top-con" style="position: relative;">'+
                 '<div class="top-con-left" style="display: inline-block;">'+
-                '<img src="{{helper.cdnhost}}/assets/img/top_phone.png" alt="" class="top_400" style="margin-right: 3px;">'+
+                '<img src="{{helper.cdnhost}}/assets/img/top_phone.png" alt="">'+
                 '<span style="font-size: 12px;color: #666;margin-left: 3px">400-010-8000</span>'+
                 '</div>'+
-                '<ul class="top-con-center yimin-con-center">'+
+                '<ul class="top-con-center">'+
                   '<li><a href="{{ helper.urlgen('branch_home','c='+tdk.cityid) }}">出国留学</a></li>'+
                   '<li class="active"><a href="{{ helper.urlgen('yimin') }}">海外移民</a></li>'+
                   '<li><a href="{{ helper.urlgen('about') }}">关于我们</a></li>'+
