修改移民国旗

--- a/views/yimin_index.html
+++ b/views/yimin_index.html
@@ -29,32 +29,25 @@
       margin: 0 auto;
     }
     .liuxue-guoqi img{
-      width:46px;
-      height:30px;
+      width:40px;
+      height:32px;
       margin: 0;
 
     }
     .liuxue-guoqi p{
-      color:#333 ;
-      font-size: 12px;
-      text-align: center;
-      margin-top: 5px;
+      width: 48px;
     }
     .liuxue-guoqi a{
-      width: auto;
-      margin: 10px 0px 25px 87px;
-      height:30px;
-      display:block;
-      float: left;
-      position: relative;
-      border: 0px;
+      margin: 10px 0px 25px 91px;
+      height: 35px;
+      text-align: center;
     }
     .yimin-shou {
-      width: 70px;
-      height: 66px;
+      width: 50px;
+      height: 38px;
       position: absolute;
-      top: 0;
-      left: 8px;
+      top: 6px;
+      left: 13px;
       background: url({{helper.cdnhost}}/assets/img/shou.gif) no-repeat 0 0;
     }
   </style>
@@ -69,23 +62,23 @@
   <div class="liuxue-guojia-line" style="height: 150px;"></div>
   <div class="nationality_guoqi" style="height: 150px;">
     <div class="liuxue-guoqi clearfix" style="margin-left:0px;">
-      <a href="#country1" style="margin: 10px 0px 25px 82px;"><img src="{{helper.cdnhost}}/assets/img/America.png" alt="美国移民"><p>美国</p></a>
-      <a href="#country3" style="margin: 10px 0px 25px 82px;"><img src="{{helper.cdnhost}}/assets/img/Canada.png" alt="加拿大移民"><p>加拿大</p></a>
-      <a href="#country4" style="margin: 10px 0px 25px 82px;"><img src="{{helper.cdnhost}}/assets/img/Australia.png" alt="澳大利亚移民"><p>澳大利亚</p></a>
-      <a href="#country5" style="margin: 10px 0px 25px 82px;"><img src="{{helper.cdnhost}}/assets/img/NEW_ZEALAND.png" alt="新西兰移民"><p>新西兰</p></a>
-      <a href="#country2" style="margin: 10px 0px 25px 82px;"><img src="{{helper.cdnhost}}/assets/img/England.png" alt="英国移民"><p>英国</p></a>
-      <a href="#country108" style="margin: 10px 0px 25px 82px;"><img src="{{helper.cdnhost}}/assets/img/eire.png" alt="爱尔兰移民"><p>爱尔兰</p></a>
-      <a href="#country7" style="margin: 10px 0px 25px 82px;"><img src="{{helper.cdnhost}}/assets/img/Greece.png" alt="希腊移民"><p>希腊</p></a>
-      <a href="#country8" style="margin: 10px 0px 25px 82px;"><img src="{{helper.cdnhost}}/assets/img/Malta.png" alt="马耳他移民"><p>马耳他</p></a><br>
-      <a href="#country112" style="margin: 10px 0px 25px 82px;"><img src="{{helper.cdnhost}}/assets/img/Spanish.png" alt="西班牙移民"><p>西班牙</p></a>
-      <a href="#country10" style="margin: 10px 0px 25px 82px;"><img src="{{helper.cdnhost}}/assets/img/Portuguesa.png" alt="葡萄牙移民"><p>葡萄牙</p></a>
-      <a href="#country11" style="margin: 10px 0px 25px 82px;"><img src="{{helper.cdnhost}}/assets/img/Cyprus.png" alt="塞浦路斯移民"><p>塞浦路斯</p></a>
+      <a href="#country1"><img src="{{helper.cdnhost}}/assets/img/home_icon_mg@2x.png" alt="美国移民"><p>美国</p></a>
+      <a href="#country3"><img src="{{helper.cdnhost}}/assets/img/home_icon_jnd@2x.png" alt="加拿大移民"><p>加拿大</p></a>
+      <a href="#country4"><img src="{{helper.cdnhost}}/assets/img/home_icon_adly@2x.png" alt="澳大利亚移民"><p>澳大利亚</p></a>
+      <a href="#country5"><img src="{{helper.cdnhost}}/assets/img/home_icon_xxl@2x.png" alt="新西兰移民"><p>新西兰</p></a>
+      <a href="#country2"><img src="{{helper.cdnhost}}/assets/img/home_icon_yg@2x.png" alt="英国移民"><p>英国</p></a>
+      <a href="#country108"><img src="{{helper.cdnhost}}/assets/img/home_icon_ael@2x.png" alt="爱尔兰移民"><p>爱尔兰</p></a>
+      <a href="#country7"><img src="{{helper.cdnhost}}/assets/img/home_icon_xl@2x.png" alt="希腊移民"><p>希腊</p></a>
+      <a href="#country8"><img src="{{helper.cdnhost}}/assets/img/home_icon_met@2x.png" alt="马耳他移民"><p>马耳他</p></a><br>
+      <a href="#country112"><img src="{{helper.cdnhost}}/assets/img/home_icon_xby@2x.png" alt="西班牙移民"><p>西班牙</p></a>
+      <a href="#country10"><img src="{{helper.cdnhost}}/assets/img/home_icon_pty@2x.png" alt="葡萄牙移民"><p>葡萄牙</p></a>
+      <a href="#country11"><img src="{{helper.cdnhost}}/assets/img/home_icon_spls@2x.png" alt="塞浦路斯移民"><p>塞浦路斯</p></a>
       <!--<a href="#country109"><img src="{{helper.cdnhost}}/assets/img/Holand.png" alt="荷兰移民"><p>荷兰</p></a>-->
-      <a href="#country14" style="margin: 10px 0px 25px 82px;"><img src="{{helper.cdnhost}}/assets/img/st_kitts.png" alt="圣基茨移民"><p>圣基茨</p></a>
-      <a href="#country12" style="margin: 10px 0px 25px 82px;"><img src="{{helper.cdnhost}}/assets/img/Antigua.png" alt="安提瓜移民"><p>安提瓜</p></a>
-      <a href="#country15" style="margin: 10px 0px 25px 82px;"><img src="{{helper.cdnhost}}/assets/img/Grenada.png" alt="格林纳达移民"><p>格林纳达</p></a>
-      <a href="#country13" style="margin: 10px 0px 25px 82px;"><img src="{{helper.cdnhost}}/assets/img/Dominica.png" alt="多米尼克移民"><p>多米尼克</p></a>
-      <a  href="#country54" style="margin: 10px 0px 25px 82px;"><img src="{{helper.cdnhost}}/assets/img/HongKong.png" alt="中国香港移民"><p>中国香港</p></a>
+      <a href="#country14"><img src="{{helper.cdnhost}}/assets/img/home_icon_scj@2x.png" alt="圣基茨移民"><p>圣基茨</p></a>
+      <a href="#country12"><img src="{{helper.cdnhost}}/assets/img/home_icon_atg@2x.png" alt="安提瓜移民"><p>安提瓜</p></a>
+      <a href="#country15"><img src="{{helper.cdnhost}}/assets/img/home_icon_glnd@2x.png" alt="格林纳达移民"><p>格林纳达</p></a>
+      <a href="#country13"><img src="{{helper.cdnhost}}/assets/img/home_icon_dmnk@2x.png" alt="多米尼克移民"><p>多米尼克</p></a>
+      <a  href="#country54"><img src="{{helper.cdnhost}}/assets/img/home_icon_zgxg@2x.png" alt="中国香港移民"><p>中国香港</p></a>
     </div>
     <div class="yimin-shou"></div>
   </div>
